--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     </style>
 </head>
 <body>
-    <script type="module" src="script.js"></script>
+    <script type="module" src="buildingscript.js"></script>
 </body>
 </html>
