added import maps

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
         body { margin: 0; overflow: hidden; }
         canvas { display: block; }
     </style>
+    <script type="importmap">
+        {
+          "imports": {
+            "three": "https://cdn.jsdelivr.net/npm/three@0.173.0/build/three.module.js",
+            "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.173.0/examples/jsm/"
+          }
+        }
+      </script>
 </head>
 <body>
     <script type="module" src="buildingscript.js"></script>
