--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 </head>
 <body>
     <script type="module" src="buildingscript.js"></script>
+    <body oncontextmenu="return false;"></body>
 </body>
 
 <!-- this is used to display errors since school laptops block dev tools-->
