--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         
         #error-container {
         position: fixed;
-        top: 0;
-        left: 0;
+        top: 12;
+        left: 12;
         background-color: rgba(255, 0, 0, 0.7);
         color: white;
         padding: 10px;
@@ -21,6 +21,19 @@
         word-wrap: break-word;
     }
   
+    #message-container {
+        position: fixed;
+        top: 12;
+        left: 12;
+        background-color: rgb(0, 116, 106);
+        color: white;
+        padding: 10px;
+        font-family: Arial, sans-serif;
+        z-index: 9999;
+        max-width: 100%;
+        word-wrap: break-word;
+    }
+
     </style>
     <script type="importmap">
         {
@@ -41,6 +54,8 @@
   <div id="error-container"></div>
 
   <script src="errors.js"></script>
+
+  <div id="message-container"></div>
 </body>
 
 
