--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 </head>
 <body>
     <script type="module" src="buildingscript.js"></script>
+    <script type="module" src="util.js"></script>
     <body oncontextmenu="return false;"></body>
 </body>
 
