--- a/index.html
+++ b/index.html
@@ -46,17 +46,16 @@
 </head>
 <body>
     <script type="module" src="buildingscript.js"></script>
+    <script type="module" src="camera.js"></script>
     <script type="module" src="util.js"></script>
     <body oncontextmenu="return false;"></body>
-</body>
 
-<!-- this is used to display errors since school laptops block dev tools-->
-<body>
-  <div id="error-container"></div>
+    <!-- this is used to display errors since school laptops block dev tools-->
+    <div id="error-container"></div>
 
-  <script src="errors.js"></script>
-
-  <div id="message-container"></div>
+    <script src="errors.js"></script>
+  
+    <div id="message-container"></div>
 </body>
 
 
