--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         z-index: 9999;
         max-width: 100%;
         word-wrap: break-word;
+        <!-- make sure to change the pointer -->
     }
   
     #message-container {
